# cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: README.md
data/licenses/: LICENSE.mit
doc/: CMakeLists.txt  README.md
examples/: README.md
exogenous/: CMakeLists.txt  README.md
extras/: README.md
include/: README.md
res/: README.md
src/: README.md
src-trees/: CMakeLists.txt  README.md
src-trees/app/: CMakeLists.txt
src-trees/app/include/: version.h.in
src-trees/app/src/: main.cpp
src-trees/helloworld/: CMakeLists.txt
src-trees/helloworld/include/: helloworld.h
src-trees/helloworld/src/: helloworld.cpp
src-trees/mymath/: CMakeLists.txt
src-trees/mymath/include/: mymath.h
src-trees/mymath/src/: makePrimeTable.cpp  mymath.cpp
tests/: README.md
tools/: README.md
